--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'com.apollographql.android'
+apply plugin: 'io.fabric'
 
 apply plugin: "org.jmailen.kotlinter"
 
@@ -68,7 +69,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0-rc02'
     implementation 'androidx.recyclerview:recyclerview:1.0.0-rc02'
     implementation 'androidx.cardview:cardview:1.0.0-rc02'
-    implementation 'com.google.android.material:material:1.0.0-rc01'
+    implementation 'com.google.android.material:material:1.0.0-rc02'
     implementation 'androidx.paging:paging-runtime:2.0.0-rc01'
     implementation 'android.arch.paging:rxjava2:1.0.1'
     implementation 'androidx.paging:paging-common:2.0.0-rc01'
@@ -87,4 +88,5 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation ('com.crashlytics.sdk.android:crashlytics:2.9.5@aar'){transitive = true}
 }
