--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,9 @@
             android:authorities="ru.grakhell.userviewer.storage.local.UserViewerSuggestionProvider"
             android:name="ru.grakhell.userviewer.storage.local.UserViewerSuggestionProvider"
             android:exported="false"/>
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="9614304bfef70514a8dc05106f1a7c26a5d99113" />
     </application>
 
 </manifest>
