--- a/build.gradle
+++ b/build.gradle
@@ -14,11 +14,13 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.0-rc02'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.apollographql.apollo:apollo-gradle-plugin:$apollo_version"
+        classpath 'io.fabric.tools:gradle:1.25.4'
 
     }
 }
@@ -33,9 +35,10 @@ allprojects {
         google()
         jcenter()
         maven {
-            name 'glide-snapshot'
+            name 'snapshots'
             url 'http://oss.sonatype.org/content/repositories/snapshots'
         }
+        maven { url 'https://maven.fabric.io/public' }
     }
 }
 
