--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ apply plugin: "org.jmailen.kotlinter"
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId 'ru.grakhell.usersearch'
+        applicationId 'ru.grakhell.userviewer'
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
