--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:fullBackupContent="@xml/backupscheme"
         android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">
         <activity android:name="ru.grakhell.userviewer.ui.activity.ConductorActivity"
             android:theme="@style/AppTheme">
@@ -32,13 +33,12 @@
             <meta-data android:name="android.app.searchable"
                 android:resource="@xml/searchable"/>
         </activity>
+        <activity android:name=".ui.activity.AuthActivity"
+            android:theme="@style/AppTheme"/>
         <provider
             android:authorities="ru.grakhell.userviewer.storage.local.UserViewerSuggestionProvider"
             android:name="ru.grakhell.userviewer.storage.local.UserViewerSuggestionProvider"
             android:exported="false"/>
-        <meta-data
-            android:name="io.fabric.ApiKey"
-            android:value="<fabric_api_key>" />
         <service
             android:name="ru.grakhell.userviewer.auth.AuthService"
             android:enabled="true"
