--- a/oauthlib/src/main/AndroidManifest.xml
+++ b/oauthlib/src/main/AndroidManifest.xml
@@ -3,35 +3,28 @@
     package="ru.grakhell.oauthlib">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
     <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
-    <uses-permission android:name="android.permission.READ_PROFILE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
         android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">
+        android:supportsRtl="true">
         <activity android:name=".ui.AuthActivity" />
 
         <service
-            android:name=".auth.AuthService"
-            android:enabled="true"
-            android:exported="false">
+            android:name="ru.grakhell.oauthlib.manager.AuthService"
+            android:permission="android.permission.MANAGE_ACCOUNTS"
+            android:enabled="true">
             <intent-filter>
                 <action android:name="android.accounts.AccountAuthenticator" />
             </intent-filter>
-
             <meta-data
                 android:name="android.accounts.AccountAuthenticator"
                 android:resource="@xml/authenticator" />
         </service>
-
-        <activity
-            android:name=".ui.LoginActivity"
-            android:label="@string/title_activity_login"></activity>
     </application>
 
 </manifest>
