--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,23 +63,23 @@ dependencies {
     implementation "com.google.dagger:dagger:$dagger2_version"
     implementation "com.google.dagger:dagger-android:$dagger2_version"
     implementation "com.google.dagger:dagger-android-support:$dagger2_version"
-    implementation 'androidx.appcompat:appcompat:1.0.0-rc02'
-    implementation 'androidx.exifinterface:exifinterface:1.0.0-rc02'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.exifinterface:exifinterface:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0-rc02'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0-rc02'
-    implementation 'androidx.cardview:cardview:1.0.0-rc02'
-    implementation 'com.google.android.material:material:1.0.0-rc02'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.paging:paging-runtime:2.0.0-rc01'
     implementation 'android.arch.paging:rxjava2:1.0.1'
     implementation 'androidx.paging:paging-common:2.0.0-rc01'
-    implementation 'android.arch.navigation:navigation-fragment:1.0.0-alpha05'
+    implementation 'android.arch.navigation:navigation-fragment:1.0.0-alpha06'
     // use -ktx for Kotlin
-    implementation 'android.arch.navigation:navigation-ui:1.0.0-alpha05'
+    implementation 'android.arch.navigation:navigation-ui:1.0.0-alpha06'
     // use -ktx for Kotlin
     kapt "com.jakewharton:butterknife-compiler:$butterknife_version"
     kapt "com.github.bumptech.glide:compiler:$glide_version"
-    kapt 'androidx.annotation:annotation:1.0.0-rc02'
+    kapt 'androidx.annotation:annotation:1.0.0'
     kapt "com.google.dagger:dagger-compiler:$dagger2_version"
     kapt "com.google.dagger:dagger-android-processor:$dagger2_version"
     //testImplementation 'junit:junit:4.12'
@@ -89,4 +89,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation ('com.crashlytics.sdk.android:crashlytics:2.9.5@aar'){transitive = true}
+    implementation project(path: ':oauthlib')
 }
