--- a/oauthlib/build.gradle
+++ b/oauthlib/build.gradle
@@ -38,19 +38,23 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinx_version"
+
     implementation "com.jakewharton.timber:timber:$timber_version"
-    implementation "com.jakewharton:butterknife:$butterknife_version"
+
     implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
     implementation "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
+
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
     implementation "com.squareup.moshi:moshi:$moshi_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:3.11.0"
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0-rc02'
     implementation 'com.google.android.gms:play-services-plus:15.0.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0-rc01'
 
-    implementation 'androidx.annotation:annotation:1.0.0-alpha1'
+    implementation 'androidx.annotation:annotation:1.0.0-rc02'
     kapt "com.jakewharton:butterknife-compiler:$butterknife_version"
     kapt 'androidx.annotation:annotation:1.0.0-rc02'
 
