--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,8 @@ apply plugin: 'io.fabric'
 apply plugin: "org.jmailen.kotlinter"
 
 android {
+    signingConfigs {
+    }
     compileSdkVersion 28
     defaultConfig {
         applicationId 'ru.grakhell.userviewer'
@@ -51,25 +53,18 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinx_version"
-
     implementation "net.cachapa.expandablelayout:expandablelayout:$expandablelayout_version"
-
     implementation "com.apollographql.apollo:apollo-runtime:$apollo_version"
     implementation "com.apollographql.apollo:apollo-http-cache:$apollo_version"
     implementation "com.apollographql.apollo:apollo-rx2-support:$apollo_version"
-
     implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
     implementation "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
-
     implementation "com.jakewharton.timber:timber:$timber_version"
     implementation "com.jakewharton:butterknife:$butterknife_version"
-
     implementation "com.github.bumptech.glide:glide:$glide_version"
-
     implementation "com.google.dagger:dagger:$dagger2_version"
     implementation "com.google.dagger:dagger-android:$dagger2_version"
     implementation "com.google.dagger:dagger-android-support:$dagger2_version"
-
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'androidx.exifinterface:exifinterface:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
@@ -83,16 +78,13 @@ dependencies {
     implementation 'android.arch.navigation:navigation-fragment:1.0.0-alpha06'
     implementation 'android.arch.navigation:navigation-ui:1.0.0-alpha06'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-
-    implementation ('com.crashlytics.sdk.android:crashlytics:2.9.5@aar'){transitive = true}
+    implementation('com.crashlytics.sdk.android:crashlytics:2.9.5@aar') { transitive = true }
     implementation project(path: ':oauthlib')
-
     kapt "com.jakewharton:butterknife-compiler:$butterknife_version"
     kapt "com.github.bumptech.glide:compiler:$glide_version"
     kapt 'androidx.annotation:annotation:1.0.0'
     kapt "com.google.dagger:dagger-compiler:$dagger2_version"
     kapt "com.google.dagger:dagger-android-processor:$dagger2_version"
-
     testImplementation 'org.robolectric:robolectric:4.0-alpha-4-SNAPSHOT'
     testImplementation 'org.mockito:mockito-core:2.21.0'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
